<resources>
    <!-- GLOBAL -->
    <string name="buttonBack">кнопка "назад"</string>

    <!-- TITLES -->
    <string name="title_application_name">PlaylistMaker</string>
    <string name="title_screen_name">Playlist Maker</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_mediateka">MediatekaActivity</string>
    <string name="title_activity_player">PlayerActivity</string>

    <string name="Search">Поиск</string>
    <string name="Settings">Настройки</string>
    <string name="Mediateka">Медиатека</string>
    <string name="Refresh">Обновить</string>
    <string name="Clear_history">Очистить историю</string>

    <!--Settings-->
    <string name="switchDarkTheme">Тёмная тема</string>
    <string name="shareApp">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>

    <string name="mailToSupportSubject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="mailToSupportText">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <!--LINKS-->
    <string name="linkToAgreement">https://yandex.ru/legal/practicum_offer/</string>
    <string name="linkToAndroidCourse">https://practicum.yandex.ru/android-developer/</string>
    <string name="supportEmail">di.burmistrov@yandex.ru</string>
    <!--HINTS-->
    <string name="hint_Search">Поиск</string>

    <!--Messeges-->

    <string name="something_went_wrong">something_went_wrong</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="network_error1">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="network_error2">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="network_error3">Возникла неизвестная проблема. Повторите попытку позднее</string>


    <!--Player-->
    <string name="sDuration">Длительность</string>
    <string name="sAlbum">Альбом</string>
    <string name="sYear">Год</string>
    <string name="sGenre">Жанр</string>
    <string name="sCountry">Страна</string>
    <string name="defaultTime">00:00</string>
    <string name="timeCounter">"%02d:%02d"</string>


    <!--Mediateka-->
    <string name="noPlaylists">Вы не создали\nни одного плейлиста</string>
    <string name="newPlaylist">Новый плейлист</string>
    <string name="emptyMediateka">Ваша медиатека пуста</string>
    <string name="FavTracks">Избранные треки</string>
    <string name="FavPlaylists">Плейлисты</string>

    <!--PlaylistEditor-->
    <string name="playlistImage">Обложка плейлиста</string>
    <string name="playlistName">Название*</string>
    <string name="playlistDescription">Описание</string>
    <string name="playlistCreate">Создать</string>
    <string name="playlistImageNotSelected">Изображение не выбрано</string>
    <string name="playlistEditsSaved">Изменения сохранены</string>
    <string name="playlistImageSelected">Обложка сохранена</string>
    <string name="playlistImageSelectionError">Ошибка сохранения обложки</string>
    <string name="playlistHasCreated">Плейлист %s создан</string>
    <string name="playlistEditorSave">Сохранить</string>
    <string name="playlistEditorEdit">Редактировать</string>

    <!--PlaylistDialogue-->
    <string name="playlistDialogueHeader">Завершить создание плейлиста?</string>
    <string name="playlistDialogueBody">Все несохраненные данные будут потеряны</string>
    <string name="playlistDialogueFinish">Завершить</string>
    <string name="playlistDialogueCancel">Отмена</string>

    <string name="playlistDialogueDeleteTrack">Хотите удалить трек?</string>
    <string name="playlistDialogueDeletePlaylist">Хотите удалить плейлист %s?</string>

    <string name="dialogueYes">Да</string>
    <string name="dialogueNo">Нет</string>


    <!--WordsForWordsEnding-->
    <plurals name="track_count">
        <item quantity="one">%d трек</item>       <!-- 1 трек -->
        <item quantity="few">%d трека</item>      <!-- 2, 3, 4 трека -->
        <item quantity="many">%d треков</item>    <!-- 5, 6, 7... треков -->
        <item quantity="other">%d треков</item>   <!-- 0, 11-19, 20+ треков -->
    </plurals>


    <!--PlaylistFragment-->
    <string name="nothingToShare">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="playlistShare">Поделиться</string>
    <string name="playlistEdit">Редактировать информацию</string>
    <string name="playlistDelete">Удалить плейлист</string>


    <!--PLAYER_BOTTOM_SHEET-->
    <string name="addInPlaylist">Добавить в плейлист</string>
    <string name="addInPlaylistSuccess">Трек добавлен в плейлист %s</string>
    <string name="addInPlaylistFail">При добавлении трека возникла ошибка</string>
    <string name="addInPlaylistAlreadyAdded">Трек уже добавлен в плейлист %s</string>


    <string name="emptyPlaylist">Ваш плейлист пуст</string>

    <!--EASY PERMISSIONS-->
    <string name="permissionDenied">"Разрешение отклонено!"</string>
    <string name="checkSettingsForAccess">"Перейдите в настройки, чтобы включить доступ."</string>
    <string name="accessToStorageGranted">"Доступ к хранилищу разрешён!"</string>
    <string name="appNeedsPermission">"Приложению нужно разрешение на доступ к изображениям."</string>
</resources>