<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingBottom="28dp"
    tools:context=".main.ui.MenuFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dim_16dp"
        android:layout_marginBottom="@dimen/dim_24dp"
        android:text="@string/title_screen_name"
        style="@style/AppName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/b_search"
            style="@style/ButtonsStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Search"
            app:icon="@drawable/ic_search_v2"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/dim_08dp" />

        <Button
            android:id="@+id/b_mediateka"
            style="@style/ButtonsStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Mediateka"
            app:icon="@drawable/ic_mediateka"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/dim_08dp" />

        <Button
            style="@style/ButtonsStyle"
            android:id="@+id/b_settings"
            android:text="@string/Settings"
            app:icon="@drawable/ic_settings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/dim_08dp" />
    </LinearLayout>
</LinearLayout>


