<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivNoInternet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="center_horizontal"
        android:layout_marginTop="102dp"
        android:layout_marginBottom="@dimen/dim_16dp"
        tools:src="@drawable/er_nointernet_l" />

    <TextView
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/network_error3"
        android:textAlignment="center"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="19sp"
        tools:text="@string/network_error1" />

    <Button
        style="@style/ButtonsStyle"
        app:cornerRadius="56dp"
        android:id="@+id/bRefresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dim_24dp"
        android:backgroundTint="?attr/colorOnPrimary"
        android:fontFamily="@font/ys_display_medium"
        android:paddingHorizontal="12dp"
        android:paddingVertical="10dp"
        android:text="@string/Refresh"
        android:textAllCaps="false"
        android:textColor="?attr/colorPrimary"
        android:textSize="14sp" />


</LinearLayout>