<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="?attr/colorPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarSearch"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="4dp"
            android:background="?attr/colorPrimary"
            android:paddingStart="@dimen/Zero"
            android:paddingEnd="@dimen/playlistMargin16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="@dimen/playlistImageButton"
                android:layout_height="@dimen/playlistImageButton"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/buttonBack"
                android:padding="8dp"
                android:src="@drawable/ic_arrow"
                app:tint="?attr/colorOnPrimary" />

            <TextView
                android:id="@+id/toolbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ys_display_medium"
                android:paddingHorizontal="@dimen/dim_12dp"
                android:text="@string/newPlaylist"
                android:textAlignment="center"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="@dimen/fragment_header" />
        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imagePlayList"
            android:layout_width="@dimen/Zero"
            android:layout_height="@dimen/Zero"
            android:layout_marginHorizontal="@dimen/dim_16dp"
            android:layout_marginTop="@dimen/playlistMargin26"
            android:adjustViewBounds="true"
            android:contentDescription="@string/playlistImage"
            android:scaleType="fitCenter"
            tools:src="@drawable/playlist_default_image"
            app:layout_constraintBottom_toTopOf="@id/frameName"
            app:layout_constraintDimensionRatio="H,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbarSearch"
            app:shapeAppearanceOverlay="@style/PlaylistImageRoundedCorners" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/frameName"
            style="@style/CustomOutlineBox"
            android:layout_width="@dimen/Zero"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/playlistMargin16"
            android:layout_marginTop="@dimen/playlistMargin32"
            android:hint="@string/playlistName"
            app:layout_constraintBottom_toTopOf="@id/frameDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imagePlayList">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiPlaylistName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/frameDescription"
            style="@style/CustomOutlineBox"
            android:layout_width="@dimen/Zero"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/playlistMargin16"
            android:layout_marginTop="@dimen/playlistMargin16"
            android:hint="@string/playlistDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frameName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <android.widget.Button
            android:id="@+id/b_create_playlist"
            android:layout_width="@dimen/Zero"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dim_16dp"
            android:layout_marginVertical="@dimen/playlistMargin32"
            android:background="@drawable/button_background_bottom_switch"
            android:enabled="false"
            android:text="@string/playlistCreate"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/fragment_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frameDescription"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
