<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/titleScreenBackground"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingBottom="28dp"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dim_16dp"

        android:layout_marginBottom="@dimen/dim_24dp"
        android:text="@string/titleScreenName"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_Header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonSearch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:backgroundTint="@color/white"
            android:text="@string/Search"
            android:textSize="@dimen/text_size_Header"
            android:textColor="@color/black"
            app:cornerRadius="@dimen/dim_16dp"
            app:icon="@drawable/icon_search"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/dim_08dp"
            android:textAllCaps="false"
            app:iconTint="@color/black"
            android:foreground="?attr/selectableItemBackground" />

        <Button
            android:id="@+id/buttonMediateka"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:backgroundTint="@color/white"
            android:text="@string/Mediateka"
            android:textSize="@dimen/text_size_Header"
            android:textColor="@color/black"
            app:cornerRadius="@dimen/dim_16dp"
            app:icon="@drawable/icon_mediateka"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/dim_08dp"
            android:textAllCaps="false"
            app:iconTint="@color/black"
            android:foreground="?attr/selectableItemBackground" />

        <Button
            android:id="@+id/buttonSettings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:backgroundTint="@color/white"
            android:text="@string/Settings"
            android:textSize="@dimen/text_size_Header"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:cornerRadius="@dimen/dim_16dp"
            app:icon="@drawable/icon_settings"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/dim_08dp"
            app:iconTint="@color/black"
            android:foreground="?attr/selectableItemBackground" />
    </LinearLayout>
</LinearLayout>